[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/images/upgrade-action.png" type="Texture" id=1]
[ext_resource path="res://nebulae/scripts/Nebulae.gd" type="Script" id=2]
[ext_resource path="res://nebulae/scripts/game/StarActions.gd" type="Script" id=3]
[ext_resource path="res://assets/images/tech-upgrade.png" type="Texture" id=4]
[ext_resource path="res://assets/images/factory-upgrade.png" type="Texture" id=5]
[ext_resource path="res://assets/images/attack-action.png" type="Texture" id=6]
[ext_resource path="res://assets/images/actions.png" type="Texture" id=7]
[ext_resource path="res://assets/images/firepower-upgrade.png" type="Texture" id=8]
[ext_resource path="res://assets/images/station-upgrade.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 36.1248

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StarActions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StarActions:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StarActions/Upgrades:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StarActions/Actions:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_actions"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("StarActions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StarActions:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StarActions/Upgrades:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StarActions/Actions:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "show_upgrades"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("StarActions/Actions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StarActions:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StarActions:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StarActions/Upgrades:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Nebulae" type="Node2D" groups=["Nebulae"]]
script = ExtResource( 2 )

[node name="StarActions" type="Node2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
script = ExtResource( 3 )

[node name="RingSprite" type="Sprite" parent="StarActions"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Upgrades" type="Node2D" parent="StarActions"]
scale = Vector2( 0.5, 0.5 )

[node name="TechUpgrade" type="Sprite" parent="StarActions/Upgrades"]
position = Vector2( 0, 118 )
texture = ExtResource( 4 )

[node name="TechUpgrade" type="Area2D" parent="StarActions/Upgrades/TechUpgrade"]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StarActions/Upgrades/TechUpgrade/TechUpgrade"]
shape = SubResource( 1 )

[node name="FactoryUpgrade" type="Sprite" parent="StarActions/Upgrades"]
position = Vector2( 118, 0 )
texture = ExtResource( 5 )

[node name="FactoryUpgrade" type="Area2D" parent="StarActions/Upgrades/FactoryUpgrade"]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StarActions/Upgrades/FactoryUpgrade/FactoryUpgrade"]
shape = SubResource( 1 )

[node name="FirepowerUpgrade" type="Sprite" parent="StarActions/Upgrades"]
position = Vector2( 0, -118 )
texture = ExtResource( 8 )

[node name="FirepowerUpgrade" type="Area2D" parent="StarActions/Upgrades/FirepowerUpgrade"]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StarActions/Upgrades/FirepowerUpgrade/FirepowerUpgrade"]
shape = SubResource( 1 )

[node name="StationUpgrade" type="Sprite" parent="StarActions/Upgrades"]
position = Vector2( -118, 0 )
texture = ExtResource( 9 )

[node name="StationUpgrade" type="Area2D" parent="StarActions/Upgrades/StationUpgrade"]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StarActions/Upgrades/StationUpgrade/StationUpgrade"]
shape = SubResource( 1 )

[node name="Actions" type="Node2D" parent="StarActions"]
scale = Vector2( 0.5, 0.5 )

[node name="AttackAction" type="Sprite" parent="StarActions/Actions"]
position = Vector2( 0, -119 )
texture = ExtResource( 6 )

[node name="AttackArea" type="Area2D" parent="StarActions/Actions/AttackAction"]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StarActions/Actions/AttackAction/AttackArea"]
shape = SubResource( 1 )

[node name="UpgradeAction" type="Sprite" parent="StarActions/Actions"]
position = Vector2( 0, 119 )
texture = ExtResource( 1 )

[node name="UpgradeArea" type="Area2D" parent="StarActions/Actions/UpgradeAction"]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StarActions/Actions/UpgradeAction/UpgradeArea"]
shape = SubResource( 1 )

[node name="AttackSizes" type="Node2D" parent="StarActions"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="StarActions"]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/show_actions = SubResource( 3 )
anims/show_upgrades = SubResource( 4 )

[connection signal="input_event" from="StarActions/Upgrades/TechUpgrade/TechUpgrade" to="StarActions" method="_on_TechUpgrade_input_event"]
[connection signal="input_event" from="StarActions/Upgrades/FactoryUpgrade/FactoryUpgrade" to="StarActions" method="_on_FactoryUpgrade_input_event"]
[connection signal="input_event" from="StarActions/Upgrades/FirepowerUpgrade/FirepowerUpgrade" to="StarActions" method="_on_FirepowerUpgrade_input_event"]
[connection signal="input_event" from="StarActions/Upgrades/StationUpgrade/StationUpgrade" to="StarActions" method="_on_StationUpgrade_input_event"]
[connection signal="input_event" from="StarActions/Actions/AttackAction/AttackArea" to="StarActions" method="_on_AttackArea_input_event"]
[connection signal="input_event" from="StarActions/Actions/UpgradeAction/UpgradeArea" to="StarActions" method="_on_UpgradeArea_input_event"]
